--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "ava",
-    "cover": "nyc ava"
+    "test-ci": "nyc ava -reporter=lcovonly",
+    "cover": "nyc ava",
+    "md": "pm2 start pen"
   },
   "repository": {
     "type": "git",
