--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
   },
   "homepage": "https://github.com/codekirei/yaml-fm#readme",
   "dependencies": {
-    "js-yaml": "^3.4.6"
+    "js-yaml": "3.5.5"
   },
   "devDependencies": {
-    "ava": "^0.7.0",
-    "nyc": "^5.0.0"
+    "ava": "0.13.0",
+    "nyc": "6.1.1"
   }
 }
